--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.5",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
