--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.6",
+    "react-map-gl-geocoder": "^1.8.1",
     "react-router-dom": "^6.20.0",
     "react-slick": "^0.29.0",
     "react-type-animation": "^3.2.0",
